syntax = "proto3";

package user;

option go_package = "../pb"; 

service UserService {
  rpc GetUserUUID(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string username = 1;
  string password_hash = 2;
}

message GetUserResponse {
  string UUID = 1;
}
  
// protoc --go_out=. --go-grpc_out=. user.proto